# snake-game

./: Cargo.toml  index.html  snake-game-1c404d9244254aad.js  snake-game-1c404d9244254aad_bg.wasm  snake-game-1e300608ab5fbeea.js  snake-game-1e300608ab5fbeea_bg.wasm  snake-game-4635d6a8d0550139_bg.wasm  snake-game-8434ccf569e9c520.js  snake-game-8434ccf569e9c520_bg.wasm  snake-game-bf74ec3162527d46.js  snake-game-f2c64726ee31b5c5_bg.wasm
pkg/: snake_game.d.ts  snake_game.js  snake_game_bg.wasm  snake_game_bg.wasm.d.ts
src/: config.rs  core.rs  lib.rs  snake.rs  utils.rs
